--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,6 @@ spring.datasource.username=root
 spring.datasource.password=232002
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
