--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,9 @@
 spring.application.name=DoaAnTotNghiep
 
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/quanlykhachsan
-spring.mvc.view.prefix=/WEB-INF/views/
-spring.mvc.view.suffix=.jsp
-
-server.port=8081
 spring.datasource.username=root
 spring.datasource.password=232002
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
